--- a/report/002_load_tables.qmd
+++ b/report/002_load_tables.qmd
@@ -131,10 +131,21 @@ recent_management_table <- recent_management_table |>
 recent_management_table <- round(recent_management_table)
 
 ### fix this, we need to find the numbers for 2025-2026
-projections_table[1:2, "Adopted OFL (mt)"] <- read_csv(here::here("report", "tables", "ofl_abc_acl_table.csv")) |>
-  dplyr::select('OFL (mt)')
-projections_table[1:2, "Adopted ACL (mt)"] <- read_csv(here::here("report", "tables", "ofl_abc_acl_table.csv")) |>
-  dplyr::select('ACL (mt)')
+# projections_table[1:2, "Adopted OFL (mt)"] <- read_csv(here::here("report", "tables", "ofl_abc_acl_table.csv")) |>
+#   dplyr::select('OFL (mt)')
+# projections_table[1:2, "Adopted ACL (mt)"] <- read_csv(here::here("report", "tables", "ofl_abc_acl_table.csv")) |>
+#   dplyr::select('ACL (mt)')
+
+### old code from the file Elizabeth found - the 2025 and 2026 numbers here are correct. 
+GMT016 <- read.csv(here::here("report", "tables", "GMT016-final specifications-.csv"))
+projections_table[1:2, "Adopted OFL (mt)"] <- GMT016 |>
+  dplyr::filter(SPECIFICATION_TYPE == "OFL", YEAR %in% projections_table$Year) |>
+  dplyr::arrange(YEAR) |>
+  dplyr::select(VAL)
+projections_table[1:2, "Adopted ACL (mt)"] <- GMT016 |>
+  dplyr::filter(SPECIFICATION_TYPE == "ACL", YEAR %in% projections_table$Year) |>
+  dplyr::arrange(YEAR) |>
+  dplyr::select(VAL)
   
 ```
 
