--- a/report/002_load_tables.qmd
+++ b/report/002_load_tables.qmd
@@ -90,7 +90,23 @@ if (file.exists(here::here("report/tables"))) {
   #NOT FINE FOR TWO AREA MODEL
   # table from r4ss::table_exec_summary()
   time_series_table <- time_series$table
-  time_series_cap <- time_series$cap
+  
+  # we found that this table was separated by Area, when comparing the two area numbers, the only differences were in Total Mortality and Exploitation Rate. We compared the separated area's numbers to the combined numbers in the TS table (and it's source table 61, Annual Time Series in the report file) and found that it was a simple sum, so we are replacing those two columns in the time_series_table with the summed Total Mortality and Exploitation Rate.
+  summed_tm <- time_series_table |> group_by(Year) |> summarise(`Total Mortality (mt)` = sum(`Total Mortality (mt)`)) 
+  summed_er <- time_series_table |> group_by(Year) |> summarise(`Exploitation Rate` = sum(`Exploitation Rate`))
+  # get rid of the duplicated years
+  time_series_table <- time_series_table[1:148,]
+  # add in the new TM and ER columns
+  time_series_table <- time_series_table |> 
+                          select(-`Total Mortality (mt)`) |> 
+                          left_join(summed_tm, by = "Year") |> 
+                          select(1:6, `Total Mortality (mt)`, everything())
+  time_series_table <- time_series_table |> 
+                          select(-`Exploitation Rate`) |> 
+                          left_join(summed_er, by = "Year")
+  
+  time_series_cap <- time_series$cap # fix the caption so that we include projections
+  time_series_cap <- "Time series of population estimates from the base model, including projections from 2025 to 2036."
   rm(time_series)
 
   time_series_table <- time_series_table |>
@@ -100,14 +116,13 @@ if (file.exists(here::here("report/tables"))) {
       grepl("Fraction", dplyr::cur_column()) ~ round(.x, 3),
       grepl("Recruits", dplyr::cur_column()) ~ round(.x, 0),
       grepl("Mortality", dplyr::cur_column()) ~ round(.x, 0),
-      TRUE ~ round(.x, 3)
-    )))
-  
+      TRUE ~ round(.x, 3))))
+
   #FINE FOR TWO AREA MODEL
-  # table from r4ss::table_ts() (not used currently)
-  ts_table <- table_ts$table
-  ts_cap <- table_ts$cap
-  rm(table_ts)
+  # table from r4ss::table_ts() (not used currently so dont bother loading it. Helped us figure out the differences between the two area values)
+  # ts_table <- table_ts$table
+  # ts_cap <- table_ts$cap
+  # rm(table_ts)
 
   eval_tables <- TRUE
 } else {
